# android-ffmpeg

./: README.md
FFMPEG/ffmpeg/include/libavutil/: ffversion.h
FFMPEG/include/libavutil/: ffversion.h
FFMPEG/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
FFMPEG/x264/include/: x264_config.h
app/: CMakeCache.txt  CMakeLists-bak.txt  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/luciuszhang/androidffmpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_integer_ffmpeg_nativeintf_FFmpegNativeJ.h  ffmpeg-native.cpp  ffmpeg-native.h
app/src/main/java/com/example/luciuszhang/androidffmpeg/: MainActivity.kt
app/src/main/java/com/integer/app/: Constants.kt
app/src/main/java/com/integer/app/activity/: MainActivity.kt
app/src/main/java/com/integer/app/dialog/: ConfirationDialog.kt  ErrorDialog.kt
app/src/main/java/com/integer/app/fragment/: CaptureFragmentV2.kt
app/src/main/java/com/integer/app/fragment/capture/: CameraConfigManager.kt  CameraManager.kt  CaptureFragment.kt  PreviewCallback.kt
app/src/main/java/com/integer/app/fragment/capturev2/: CaptureFragmentV2.kt
app/src/main/java/com/integer/app/view/: AutoFitTextureView.kt
app/src/main/java/com/integer/ffmpeg/: EncodeThread.kt  FFmpeg.kt
app/src/main/java/com/integer/ffmpeg/app/: Constants.kt
app/src/main/java/com/integer/ffmpeg/app/activity/: CaptureFragment.kt  CaptureFragmentV2.kt  MainActivity.kt
app/src/main/java/com/integer/ffmpeg/app/dialog/: ConfirationDialog.kt
app/src/main/java/com/integer/ffmpeg/app/view/: AutoFitTextureView.kt
app/src/main/java/com/integer/ffmpeg/nativeintf/: FFmpegNative.kt  FFmpegNativeJ.java
app/src/main/res/drawable/: icon_main_record.xml
app/src/main/res/layout/: fragment_capture.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/example/luciuszhang/androidffmpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
